--- a/grid-movies/tsconfig.json
+++ b/grid-movies/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
     "jsx": "react",
+    "baseUrl": "src",
+    "paths": {
+      "*": ["src/*"]
+    },
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
