--- a/grid-movies/package.json
+++ b/grid-movies/package.json
@@ -8,12 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
-    "json-server": "^1.0.0-beta.2",
+    "json-server": "0.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.5"
   },
   "scripts": {
     "start": "react-scripts start",
