--- a/grid-movies/package.json
+++ b/grid-movies/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
-    "json-server": "0.16.3",
+    "json-server": "^1.0.0-beta.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
