npm run start script update

--- a/grid-movies/package.json
+++ b/grid-movies/package.json
@@ -17,7 +17,7 @@
     "zustand": "^4.5.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & npm run server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
